upgrade to Java + JavaFX 25