@@ -11,11 +11,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>5.10.0</junit.version>
-        <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <javafx.version>21</javafx.version>
+        <junit.version>6.0.1</junit.version>
+        <java.version>25</java.version>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
+        <javafx.version>25.0.1</javafx.version>
     </properties>
 
     <dependencies>
@@ -49,7 +48,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.14.1</version>
                 <configuration>
                     <proc>full</proc>
                     <parameters>true</parameters>
@@ -89,10 +88,12 @@
                                 <option>javafx.graphics/javafx.scene.text=org.example.fxfontfallbackdemo</option>
                                 <option>--add-exports</option>
                                 <option>javafx.graphics/com.sun.javafx.font=org.example.fxfontfallbackdemo</option>
+                                <option>--enable-native-access=javafx.graphics</option>
                                 <option>-Dprism.lcdtext=false</option>
                                 <option>-Dfile.encoding=UTF-8</option>
                                 <option>-Dstdout.encoding=UTF-8</option>
                                 <option>-Dsterror.encoding=UTF-8</option>
+                                <option>-Dstdin.encoding=UTF-8</option>
                             </options>
                         </configuration>
                     </execution>
